# sampleextension

./: .cvsignore  .project  .travis.yml  ChangeLog  Makefile.in  README  README.cygwin  README.sha  aclocal.m4  auto.def  config.tcl.in  configure  configure.ac  configure.in  exampleA.c  exampleA.h  make.tcl  mkIndex.tcl.in  mkinstalldirs  pkgIndex.tcl.in  sample.h  sha1.c  sha1.h  sha1.n  tcl.m4  tclexampleA.c  tclsha1.c
.fossil-settings/: crnl-glob  ignore-glob
.github/workflows/: linux-build.yml
autosetup/: local.tcl
doc/: man.macros  sha1.n
generic/: sample.c  sample.h  sample.tcl  tclsample.c
tea/: design.txt  makefiles.txt  packages.txt  toman.tcl  writingdocs.txt  writingtests.txt
tests/: all.tcl  exampleA.test  sample.test  tclexampleA.test  tclsample.test
win/: makefile.vc  nmakehlp.c  pkg.vc  rules.vc
